--- a/nextflow.config
+++ b/nextflow.config
@@ -11,4 +11,14 @@ params {
     bwa_flag_f = 3
     bwa_flag_F = 1540
     outdir = "$PWD/" + "outputs-vOTU-table"
+    coassembly = false
+}
+
+singularity {
+    enable = true
+}
+
+process {
+    cpus = 5
+    memory = 20.GB
 }
